--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,23 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  .bg-image {
+    background-image: url("./assets/pattern-bg.png");
+  }
+  .i-arrow {
+    background-image: url("./assets/icon-arrow.svg");
+    background-size: contain;
+    background-repeat: no-repeat;
+    cursor: pointer;
+  }
+  .marker {
+    background-image: url("./assets/icon-location.svg");
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+  }
+}
